--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script type="text/javascript">
     window.birthday = prompt('What is your birthday? MM/DD/YYYY')
     // invoke displayAge once
+    console.log(window.birthday, typeof window.birthday);
     displayAge()
     // invoke displayAge on an interval once a second
     setInterval(displayAge, 1000)
@@ -21,7 +22,12 @@
       Use moment() to create a new moment object from the present time
       Fix this function to display someone's exact age
       */
-      document.querySelector('.countdown').innerHTML = moment()
+     
+     var year = window.birthday.substring(6)
+     var month = window.birthday.substring(0,2);
+     var day = window.birthday.substring(3,5)
+      document.querySelector('.countdown').innerHTML = moment.preciseDiff(moment(`${year}-${month}-${day} 00:00:00`, 'YYYY-MM-DD HH:mm:ss'),
+                                moment('2014-02-02 01:01:01', 'YYYY-MM-DD HH:mm:ss'))
     }
   </script>
 </body>
